リストを追加

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,8 @@
             {{ site.title }} とは
           </h1>
           <div class="footer-sections-element-description">
-            {{ site.description_long }}
+            {{ site.description_long }}<br />
+            <a href=http://amzn.asia/er6vxI4/>田舎fmを応援する</a>
           </div>
         </section>
         <section class="column-small-4 footer-sections-element">
