--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -58,6 +58,8 @@
             <a class="twitter-share-button" href="https://twitter.com/intent/tweet?hashtags={{ site.hashtag }}&url={{ site.github.url }}{{ page.url }}&text={{ page.title }}">
               Tweet
             </a>
+            <br />
+            <a href="/">一覧へ戻る</a>
           </footer>
         </article>
       </div>
