一覧へ戻るリンクが壊れているのを修正

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -59,7 +59,7 @@
               Tweet
             </a>
             <br />
-            <a href="/">一覧へ戻る</a>
+            <a href="/inaka-fm/">一覧へ戻る</a>
           </footer>
         </article>
       </div>
